# Explore

./: API.md  README.md  enemy.py  ideas.txt  install-explore-deps.bat  main.py  pyproject.toml  to do list
build-linux/: main.spec
json/: achievements.json  ascii.json  boss_levels.json  enemies.json  items.json  rooms.json
