[tool.poetry]
name = "repl_python3_Explore"
version = "0.1.0"
description = "A text-based dungeon-crawling treasure-finding monster-battling open-source Python-powered RPG game"
authors = ["Blue/@tehgingergod", "Crusty/@CrustyFriends"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
readchar = "^2.0.1"
py-term = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
